Fixed #3 by removing footer's z-index

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -2,7 +2,6 @@
 
 .footerbar{
   position: relative;
-  z-index: 1;
 
   @include display-flex;
   @include align-items(flex-start);
